# DesignPatterns

./: .clang-format  .gitignore  CMakeLists.txt
Creational/: Builder.cpp  Factory.cpp  Prototype.cpp  Singleton.cpp
Optimization/: ObjectPool.cpp  PoolAllocator.cpp  PoolAllocator.hpp  PoolAllocatorT.hpp
